<resources>
    <string name="app_name">Taxa Usuario</string>
    <string name="title_activity_home">Home</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="action_settings">Settings</string>
    <string name="configuration">Configuración</string>
    <string name="email">tu@example.com</string>
    <string name="password">Contraseña</string>
    <string name="name">Nombre</string>
    <string name="last_name">Apellidos</string>
    <string name="phone_number">Número telefónico</string>
    <string name="policies">Al registrarse usted está aceptando nuestros términos de privacidad y condiciones de uso</string>
    <string name="sign_in">Registrarse</string>
    <string name="login">Login</string>
    <string name="remember_password">¿Ha olvidado su contraseña?</string>
    <string name="recovery">Recuperar contraseña</string>
    <string name="email_error">Favor de ingresar un correo válido en formato tu@example.com</string>
    <string name="password_error">Favor de ingresar su contraseña</string>
    <string name="min">0 min</string>
    <string name="km">0 km</string>
    <string name="title_home">Inicio</string>
    <string name="title_dashboard">Configuración</string>
    <string name="title_notifications">Notificaciones</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>
