<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_registro"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimaryDark"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.valhallasoft.usuariotaxa.View.Submit.SubmitActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true"
        tools:ignore="UselessParent">

        <LinearLayout
            android:id="@+id/layout_container"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            tools:ignore="UselessParent">

            <ImageView
                android:id="@+id/imageView_logo"
                android:layout_width="match_parent"
                android:layout_height="80dp"
                android:contentDescription=""
                android:src="@mipmap/ic_launcher"
                tools:ignore="ContentDescription" />

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <EditText
                    android:id="@+id/edt_smit_email"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:maxLength="40"
                    android:drawableLeft="@drawable/ic_email"
                    android:drawablePadding="10dp"
                    android:hint="@string/email"
                    android:inputType="textEmailAddress"
                    tools:ignore="RtlHardcoded" />
            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <EditText
                    android:id="@+id/edt_smit_password"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:maxLength="20"
                    android:layout_marginTop="16dp"
                    android:drawableLeft="@drawable/ic_password"
                    android:drawablePadding="10dp"
                    android:ems="60"
                    android:hint="@string/password"
                    android:inputType="textPassword"
                    tools:ignore="RtlHardcoded" />

            </android.support.design.widget.TextInputLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:baselineAligned="false">

                <android.support.design.widget.TextInputLayout
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    >

                    <EditText
                        android:id="@+id/edt_smit_name"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:drawableLeft="@drawable/ic_user"
                        android:drawablePadding="10dp"
                        android:maxLength="30"
                        android:hint="@string/name"
                        tools:ignore="RtlHardcoded" />

                </android.support.design.widget.TextInputLayout>

                <android.support.design.widget.TextInputLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    >

                    <EditText
                        android:id="@+id/edt_smit_lst_name"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:maxLength="50"
                        android:hint="@string/last_name"
                        tools:ignore="RtlHardcoded" />

                </android.support.design.widget.TextInputLayout>

            </LinearLayout>

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                >

                <EditText
                    android:id="@+id/edt_smit_phone_num"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:drawableLeft="@drawable/ic_phone_number"
                    android:hint="@string/phone_number"
                    android:inputType="phone"
                    android:maxLength="10"
                    tools:ignore="RtlHardcoded" />

            </android.support.design.widget.TextInputLayout>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <TextView
                    android:id="@+id/textView_policies"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/policies"
                    android:gravity="center"
                    android:textSize="15dp"
                    android:typeface="sans"
                    android:layout_marginTop="25dp"
                    tools:ignore="SpUsage"
                    android:layout_centerInParent="true"/>

                <Button
                    android:id="@+id/button_register"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="25dp"
                    android:text="@string/sign_in"
                    android:textColor="@color/colorText"
                    android:theme="@style/MyButton"
                    android:layout_alignParentBottom="true"/>

            </RelativeLayout>

        </LinearLayout>

    </ScrollView>

</RelativeLayout>