<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_inicio"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimaryDark"
    tools:context="com.example.valhallasoft.usuariotaxa.View.Login.Login">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true"
        tools:ignore="UselessParent"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true">

        <LinearLayout
            android:orientation="vertical"
            android:id="@+id/layout_container"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            tools:ignore="UselessParent">

            <ImageView
                android:id="@+id/imageView_logo"
                android:layout_width="match_parent"
                android:layout_height="80dp"
                android:layout_marginTop="35dp"
                android:layout_marginBottom="35dp"
                android:src="@mipmap/ic_launcher"
                android:contentDescription=""
                tools:ignore="ContentDescription" />

            <TextView
                android:id="@+id/textView_sign_in"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="20dp"
                android:gravity="center"
                android:text="@string/sign_in"
                android:textColor="@color/colorText"
                android:textSize="20sp"
                android:typeface="sans" />

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                >

                <EditText
                    android:id="@+id/editText_email"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="20dp"
                    android:layout_marginRight="20dp"
                    android:drawableLeft="@drawable/ic_email"
                    android:drawablePadding="10dp"
                    android:ems="60"
                    android:hint="@string/email"
                    android:inputType="textEmailAddress"
                    tools:ignore="RtlHardcoded,TextFields" />
            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <EditText
                    android:id="@+id/editText_password"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="16dp"
                    android:layout_marginLeft="20dp"
                    android:layout_marginRight="20dp"
                    android:layout_marginTop="16dp"
                    android:drawableLeft="@drawable/ic_password"
                    android:drawablePadding="10dp"
                    android:ems="60"
                    android:hint="@string/password"
                    android:inputType="textPassword"
                    tools:ignore="RtlHardcoded" />

            </android.support.design.widget.TextInputLayout>


            <Button
                android:id="@+id/button_login"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="16dp"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:layout_marginTop="10dp"
                android:text="@string/login"
                android:textColor="@color/colorText"
                android:theme="@style/MyButton" />

            <TextView
                android:id="@+id/textView_remember_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/remember_password"
                android:gravity="center"
                android:textSize="15dp"
                android:typeface="sans"
                android:layout_marginTop="30dp"
                tools:ignore="SpUsage" />
        </LinearLayout>

    </ScrollView>

</RelativeLayout>
